<resources>
    <string name="app_name">DHBW-Verwaltung</string>
    <string name="navigation_drawer_open">Menuleiste öffnen</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_userName" translatable="false">%1$s (%2$s)</string>
    <string name="nav_header_userMail" translatable="false">%1$s</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_logout">Abmelden</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_home">Startseite</string>
    <string name="menu_vorlesung">Vorlesungsplan</string>
    <string name="menu_dataProtection">Datenschutzerklärung</string>
    <string name="menu_professors">Professoren</string>
    <string name="menu_impressum">Impressum</string>
    <string name="home_second" translatable="false">Home Second</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second" translatable="false">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_gallery_second" translatable="false">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_slideshow_second" translatable="false">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="impressum">Herausgeberin
        \n\n
        Duale Hochschule Baden–Württemberg Stuttgart
        \n
        Baden-Wuerttemberg Cooperative State University Stuttgart
        \n
        Jägerstraße 56
        \n
        70174 Stuttgart
        \n
        \n
        info@dhbw-stuttgart.de
        \n
        www.dhbw-stuttgart.de
        \n\n
        Die Duale Hochschule Baden-Württemberg ist eine rechtsfähige Körperschaft des öffentlichen Rechts.
        Sie wird gesetzlich vertreten durch den Präsidenten der Dualen Hochschule Baden-Württemberg, Herrn Prof. Arnold van Zyl (PhD).
        Gesetzlicher Vertreter des Hochschulstandorts Stuttgart ist der Rektor Herr Prof. Dr. Joachim Weber.
        \n\n
        Prof. Dr. Joachim Weber / Tel.: 0711/1849-638 / E-Mail: joachim.weber@dhbw-stuttgart.de
        \n\n
        Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz: DE287664832
        \n
        EORI Nummer: DE853160537241079
        \n\n\n
        Zuständige Aufsichtsbehörde
        \n\n
        Ministerium für Wissenschaft, Forschung und Kunst Baden-Württemberg
        \n
        Königstraße 46
        \n
        D-70173 Stuttgart
        \n
        Telefon: (+49) 711 / 279-0
        \n
        Telefax: (+49) 711 / 279-3081
        \n
        poststelle@mwk.bwl.de
        \n
        Konzeptionelle, redaktionelle und technische Verantwortung
        \n\n\n
        Realisierung durch die App-Redaktion der DHBW Stuttgart.
        \n\n
        Inhaltlich sind die jeweils zuständigen Personen der Studiengänge, Studienrichtungen, Studienzentren oder Organisationseinheiten
        (IT Service Center, Auslandsamt, Bibliothek etc.) bzw. die zuständigen Studenten verantwortlich.
        \n\n\n
        Haftungsbeschränkung
        \n\n
        Die Inhalte dieser Applikation werden mit größtmöglicher Sorgfalt erstellt.
        Der Anbieter übernimmt jedoch keine Gewähr für die Richtigkeit, Vollständigkeit und Aktualität der bereitgestellten Inhalte.
        Die Nutzung der Inhalte der Applikation erfolgt auf eigene Gefahr des Nutzers.
        Namentlich gekennzeichneteBeiträge geben die Meinung des jeweiligen Autors und nicht immer die Meinung des Anbieters wieder.
        \n\n\n
        Externe Links
        \n\n
        Diese Applikation enthält Verknüpfungen zu Websites Dritter (\"externe Links\").
        Diese Websites unterliegen der Haftung der jeweiligen Betreiber.
        Der Anbieter hat keinerlei Einfluss auf die aktuelle und zukünftige Gestaltung und auf die Inhalte der verknüpften Seiten.
        Das Setzen von externen Links bedeutet nicht, dass sich der Anbieter die hinter dem Verweis oder Link liegenden Inhalte zu eigen macht.
        Eine ständige Kontrolle der externen Links ist für den Anbieter ohne konkrete Hinweise auf Rechtsverstöße nicht zumutbar.
        Bei Kenntnis von Rechtsverstößen werden jedoch derartige externe Links unverzüglich gelöscht.
        \n\n\n
        Urheber- und Leistungsschutzrechte
        \n\n
        Die auf dieser Applikation veröffentlichten Inhalte unterliegen dem deutschen Urheber- und Leistungsschutzrecht.
        Jede vom deutschen Urheber- und Leistungsschutzrecht nicht zugelassene Verwertung bedarf der vorherigen schriftlichen Zustimmung des Anbieters oder jeweiligen Rechteinhabers.
        Dies gilt insbesondere für Vervielfältigung, Bearbeitung, Übersetzung, Einspeicherung, Verarbeitung oder Wiedergabe von Inhalten in Datenbanken oder anderen elektronischen Medien und Systemen.
        Inhalte und Rechte Dritter sind dabei als solche gekennzeichnet.
        Die unerlaubte Vervielfältigung oder Weitergabe einzelner Inhalte oder kompletter Seiten ist nicht gestattet und strafbar.
        Lediglich die Herstellung von Kopien und Downloads für den persönlichen, privaten und nicht kommerziellen Gebrauch ist erlaubt.
        \n\n
    </string>
    <string name="profile_greetings">Hello %1$s!</string>
    <string name="profile_viewContent">%1$s: %2$s</string>
    <string name="profile_hint">Hier %1$s eingeben</string>
    <string name="profile_name">Name</string>
    <string name="profile_matNr">Matrikelnummer</string>
    <string name="profile_mail">Email</string>
    <string name="profile_class">Kurs</string>
    <string name="profile_major">Studienrichtung</string>
    <string name="profile_deepening">Vertiefungsrichtung</string>
    <string name="profile_saveChanges">Änderungen speichern</string>
    <string name="messages_changesSaved">Erfolgreich gespeichert!</string>
    <string name="messages_changesNotSaved">Es ist etwas schief gelaufen, bitte erneut versuchen!</string>
    <string name="key_name" translatable="false">userName</string>
    <string name="key_matNr" translatable="false">userMatNr</string>
    <string name="key_mail" translatable="false">userMail</string>
    <string name="key_class" translatable="false">userClass</string>
    <string name="key_major" translatable="false">userMajor</string>
    <string name="key_deepening" translatable="false">userDeepening</string>
    <string name="key_language" translatable="false">language</string>
    <string name="key_professors" translatable="false">professors</string>
    <string name="key_secretariat" translatable="false">secretariat</string>
    <string name="key_INF" translatable="false">INF</string>
    <string name="key_loggedIn" translatable="false">loggedIn</string>
    <string name="key_logout" translatable="false">logout</string>
    <string name="sec_INF" translatable="false">Sekretariat für INF Sem. 2

        +1. Studienjahr
        Carina Millow / Tel.: 0711/1849-4517 / E-Mail: carina.millow@dhbw-stuttgart.de

        2. Studienjahr
        Christine Rohne / Tel.: 0711/1849-4513 / E-Mail: christine.rohne@dhbw-stuttgart.de

        3. Studienjahr
        Andrea Dölker / Tel.: 0711/1849-4516 / E-Mail: andrea.doelker@dhbw-stuttgart.de

        Labor

        Dipl.-Inform. (FH) Ayse Isik / Tel.: 0711/1849-4563 / E-Mail: ayse.isik@dhbw-stuttgart.de
        Daniel Pesler B.Eng. / Tel.: 0711/1849- / E-Mail: daniel.pesler@dhbw-stuttgart.de
        Dipl.-Ing. (FH) Günter Schneider / Tel.: 0711/1849-4570 / E-Mail: guenter.schneider@dhbw-stuttgart.de
        Franjo Stjepandic B.Eng. / Tel.: 0711/1849-- / E-Mail: franjo.stjepandic@dhbw-stuttgart.de

        Ansprechpartner für Auslandsangelegenheiten
        Prof. Dr. Dirk Reichardt / Tel.: 0711/1849-4538 / E-Mail: dirk.reichardt@dhbw-stuttgart.de</string>
    <string name="sec_none">Für diese Studienrichtung ist noch kein Sekretariatseintrag vorhanden</string>
    <string name="settings_language_header">Spracheinstellungen</string>
    <string name="settings_language_title">Anzeigesprache</string>
    <string name="language_de">Deutsch</string>
    <string name="language_de_value" translatable="false">de</string>
    <string name="language_en">Englisch</string>
    <string name="language_en_value" translatable="false">en</string>
</resources>