<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_profile"
                android:title="@string/menu_profile"/>

        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home"/>

        <item
                android:id="@+id/nav_vorlesung"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_vorlesung"/>

        <item
                android:id="@+id/nav_professors"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_professors"/>

        <item
                android:id="@+id/nav_data_protection"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_dataProtection"/>
          
        <item
                android:id="@+id/nav_secretariat"
                android:icon="@drawable/ic_menu_camera"
                android:title="Secretariat"/>
        <item
                android:id="@+id/nav_impressum"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_impressum"/>

        <item
                android:id="@+id/nav_settings"
                android:title="@string/menu_settings"
                android:visible="false"/>
    </group>
</menu>
